# a-flags

./: Cargo.toml  README.md
src/: flag.rs  main.rs
