[package]
name = "a-flags"
version = "0.1.0"
authors = ["Altair"]
description = "Print LGBTQIA+ flags in your terminal"
edition = "2021"
readme = "README.md"
license = "GPL-3.0"
keywords = ["lgbt", "terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = "4.5.20"
colored = "2.1.0"
